# just-init

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: release.yaml
src/just_init/: __init__.py  __main__.py  cli.py
src/just_init/generators/: __init__.py  base.py  python.py
src/just_init/templates/python/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  release-please-config.json
src/just_init/templates/python/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
src/just_init/templates/python/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/just_init/templates/python/.github/workflows/: ci.yaml  release.yaml
src/just_init/templates/python/src/my_project/: __init__.py
src/just_init/templates/python/tests/: test_example.py
tests/: test_cli.py  test_python_generator.py
