[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "just-init"
version = "0.2.0"
description = "Extensible project generator for modern development workflows"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = [
    "LICENSE",
]

authors = [
    { name = "just-init maintainers" },
]

dependencies = [
    "email-validator>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/your-username/just-init"
Repository = "https://github.com/your-username/just-init"
Issues = "https://github.com/your-username/just-init/issues"


[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",

    # Quality
    "ruff>=0.15.0",
    "pyright>=1.1",

    # Workflow
    "pre-commit>=4.6.0",
    "commitizen>=4.16.4",
]


[tool.uv]
required-version = ">=0.11"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = [
    "src",
]


[project.scripts]
just-init = "just_init.cli:main"


[tool.setuptools.package-data]
just_init = [
    "py.typed",
    "templates/**/*",
    "templates/python/.gitignore",
    "templates/python/.pre-commit-config.yaml",
    "templates/python/.python-version",
    "templates/python/.release-please-manifest.json",
    "templates/python/.editorconfig",
    "templates/python/.github/workflows/*.yaml",
    "templates/python/.github/ISSUE_TEMPLATE/*.yml",
    "templates/python/.github/CODEOWNERS",
    "templates/python/.github/PULL_REQUEST_TEMPLATE.md",
    "templates/python/.github/dependabot.yml",
    "templates/python/.vscode/*.json",
]


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = false


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
]


[tool.coverage.run]
branch = true
source = [
    "just_init",
]
omit = [
    "src/just_init/__main__.py",
]


[tool.coverage.report]
show_missing = true
fail_under = 85


[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
src = [
    "src",
]


[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "SIM",
    "PT",
    "RUF",
]


[tool.ruff.lint.isort]
known-first-party = [
    "just_init",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true


[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
]
typeCheckingMode = "standard"
pythonVersion = "3.13"
