[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "just-init"
version = "0.1.0"
description = "Minimal project generator"
requires-python = ">=3.13,<3.14"
authors = [{ name = "just-init maintainers" }]

dependencies = [
    "email-validator>=2.3.0",
]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
just-init = "just_init.cli:main"


[tool.setuptools.package-data]
just_init = [
    "py.typed",
    "templates/**/*",
]
