[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "my-project"
version = "0.1.0"
description = "A short description of the project"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Your Name", email = "your.email@example.com" }]
maintainers = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["python", "template"]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/my-project"
Repository = "https://github.com/your-username/my-project"
Issues = "https://github.com/your-username/my-project/issues"
Changelog = "https://github.com/your-username/my-project/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.15.0",
    "pyright>=1.1",
    "pre-commit>=4.6.0",
    "commitizen>=4.16.4",
]


[tool.uv]
required-version = ">=0.11"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
my_project = ["py.typed"]


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = false


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "-q", "--strict-config", "--strict-markers"]


[tool.coverage.run]
branch = true
source = ["my_project"]


[tool.coverage.report]
show_missing = true
fail_under = 85


[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
src = ["src"]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "ASYNC", "SIM", "PT", "RUF"]
ignore = ["COM812", "ISC001"]


[tool.ruff.lint.isort]
known-first-party = ["my_project"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true


[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.13"
