[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "my-project"
version = "0.1.0"
description = "Minimal project"
requires-python = ">=3.13,<3.14"
authors = [{ name = "Your Name", email = "your.email@example.com" }]

dependencies = []


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
my_project = ["py.typed"]
